--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "koa-convert": "1.2.0",
     "koa-generic-session": "2.0.1",
     "koa-generic-session-mongo": "0.4.0",
+    "koa-logger": "3.2.0",
+    "koa-multer": "1.0.2",
     "koa-passport": "4.0.1",
     "koa-router": "7.4.0",
     "koa-session": "5.8.1",
     "koa-static": "4.0.2",
     "koa-views": "6.1.4",
+    "mkdirp": "0.5.1",
     "mongoose": "5.0.11",
     "node-gyp": "3.6.2",
     "nunjucks": "3.1.2",
