--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "passport-google-auth": "1.0.2",
     "passport-google-oauth": "1.0.0",
     "passport-local": "1.0.0",
-    "pm2": "2.10.1"
+    "pm2": "2.10.1",
+    "socket.io": "2.1.0"
   },
   "devDependencies": {
     "dotenv": "5.0.1"
