--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "illuminati",
   "license": "MIT",
   "scripts": {
-    "start": "pm2 start src/index.js -i 0 --name 'nodeapp'",
+    "start": "GOOGLE_OAUTH2_CLIENT_ID=43389588445-np7bauh2t7225f5idvqq2d7t9615va6e.apps.googleusercontent.com GOOGLE_OAUTH2_CLIENT_SECRET=p0hWCplqPc4-CW46YDpWVdeN GOOGLE_OAUTH2_CALLBACKURL=https://thidaihoc.online/auth/google/callback COOKIE_SIGN_KEY=a_secret_1,a_secret_2,a_secret_n pm2 start src/index.js -i 0 --name 'nodeapp'",
     "stop": "pm2 stop nodeapp",
     "restart": "pm2 restart nodeapp",
     "delete": "pm2 delete nodeapp",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bcrypt": "1.0.3",
+    "easyrtc": "1.1.0",
     "koa": "2.5.0",
     "koa-bodyparser": "4.2.0",
     "koa-convert": "1.2.0",
@@ -40,6 +41,7 @@
     "socket.io": "2.1.0"
   },
   "devDependencies": {
-    "dotenv": "5.0.1"
+    "dotenv": "5.0.1",
+    "express": "4.16.3"
   }
 }
