--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "passport-google-oauth": "1.0.0",
     "passport-local": "1.0.0",
     "pm2": "2.10.1",
-    "socket.io": "2.1.0"
+    "socket.io": "2.1.0",
+    "sweetalert2": "7.18.0"
   },
   "devDependencies": {
     "dotenv": "5.0.1",
